# CCAgT-utils

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  requirements-dev.txt  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: check.yml  codeql-analysis.yml  coverage.yml  main.yml  python-publish.yml  tests.yml
CCAgT_utils/: CCAgT.py  Categories.py  __main__.py  categories.py  checkers.py  constants.py  converter.py  converters.py  describe.py  errors.py  main.py  prepare.py  slice.py  split.py  utils.py
CCAgT_utils/base/: categories.py  colors.py  errors.py  geometries.py  utils.py
CCAgT_utils/commands/: converter.py  main.py
CCAgT_utils/converters/: CCAgT.py  COCO.py  LabelBox.py  __main__.py  main.py  masks.py  utils.py
CCAgT_utils/converters_old/: main.py  masks.py  utils.py
CCAgT_utils/formats/: CCAgT.py  COCO.py  LabelBox.py  annotation.py  ccagt.py  checkers.py  coco.py  labelbox.py  mask.py
CCAgT_utils/types/: annotation.py  checkers.py  colors.py  mask.py
CCAgT_utils/visualization/: __main__.py  _show.py  colors.py  draw.py  main.py  plot.py
data/samples/: CCAgT_dataset_metadata.json  categories_helper.json  sanitized_sample_labelbox.json
examples/: describe.ipynb  slice.ipynb  split.ipynb
examples/converters/: CCAgT.ipynb  labelbox.ipynb
examples/visualization/: plots.ipynb
testing/: create.py
tests/: CCAgT_test.py  Categories_Helper_test.py  categories_test.py  checkers_test.py  conftest.py  converter_test.py  converters_test.py  describe_test.py  main_test.py  prepare_test.py  slice_test.py  split_test.py  utils_test.py
tests/base/: categories_test.py  colors_test.py  geometries_test.py  utils_test.py
tests/commands/: conftest.py  converter_test.py  main_test.py
tests/converters/: CCAgT_annotations_test.py  CCAgT_test.py  COCO_test.py  labelbox_annotations_test.py  labelbox_to_CCAgT_test.py  main_test.py  masks_test.py  utils_test.py
tests/converters/CCAgT/: CCAgT_annotations_test.py  Categories_Helper_test.py
tests/converters_old/: COCO_test.py  labelbox_annotations_test.py  main_test.py  utils_test.py
tests/formats/: CCAgT_test.py  COCO_test.py  LabelBox_test.py  annotation_test.py  checkers_test.py  coco_test.py  mask_test.py
tests/types/: annotation_test.py  checkers_test.py  colors_test.py  mask_test.py
tests/visualization/: _show_test.py  colors_test.py  conftest.py  main_test.py  plot_test.py
