[metadata]
name = CCAgT_utils
version = 0.1.0
description = A framework of utilities to help at the use of the CCAgT dataset
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnnv1/CCAgT_dataset_utils
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache 2.0 License
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    networkx>=2.6.3
    numpy>=1.21.5
    pandas>=1.1.5
    shapely>=1.8.0
    virtualenv>=20.0.8
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    data*

[options.package_data]
pre_commit.resources =
    *.tar.gz
    empty_template_*

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
