[metadata]
name = CCAgT_utils
version = 0.1.1-alpha.1
description = A framework of utilities to help at the use of the CCAgT dataset
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnnv1/CCAgT_dataset_utils
author = João Gustavo Atkinson Amorim
author_email = joaogustavoamorim@gmail.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    networkx>=2.6.3
    numpy>=1.21.5
    pandas>=1.1.5
    pillow>=9.0.1
    pyarrow>=7.0.0
    shapely>=1.8.0
    virtualenv>=20.0.8
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    data*

[options.entry_points]
console_scripts =
    CCAgT-converter = CCAgT_utils.converters.main:main
    CCAgT-visualization = CCAgT_utils.visualization.main:main

[bdist_wheel]
universal = True
